overflow bug fixed

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
 }
 @keyframes animateBg {
     0% { background-position: 100% 0%; }
-    100% { background-position: 0% 0%; }
+    100% { background-position: 0% 99%; }
 }
 
 
